OAK-11605 : removed usage of Guava's ImmutableSet.copyOf with LinkedSet